--- a/public/new/pokemon_manifest.json
+++ b/public/new/pokemon_manifest.json
@@ -3236,12 +3236,14 @@
         },
         "paldeanfire": {
           "types": [
-            "normal"
+            "fighting",
+            "fire"
           ]
         },
         "paldeanwater": {
           "types": [
-            "normal"
+            "fighting",
+            "water"
           ]
         }
       },
@@ -3258,12 +3260,14 @@
         },
         "paldeanfire": {
           "types": [
-            "normal"
+            "fighting",
+            "fire"
           ]
         },
         "paldeanwater": {
           "types": [
-            "normal"
+            "fighting",
+            "water"
           ]
         }
       }
