refactor: add Arbok regional variants and their sprite assets

--- a/public/sprite_manifest.json
+++ b/public/sprite_manifest.json
@@ -13294,6 +13294,94 @@
         "width": 56
       }
     },
+    "arbok_agatha": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_agatha/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_agatha/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_agatha/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_agatha/shiny_front.png",
+        "width": 56
+      }
+    },
+    "arbok_ariana": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_ariana/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_ariana/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_ariana/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_ariana/shiny_front.png",
+        "width": 56
+      }
+    },
+    "arbok_kanto": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_kanto/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_kanto/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_kanto/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_kanto/shiny_front.png",
+        "width": 56
+      }
+    },
+    "arbok_koga": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_koga/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_koga/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_koga/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok_koga/shiny_front.png",
+        "width": 56
+      }
+    },
     "arcanine": {
       "normal_animated": {
         "height": 56,
