--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.535.0",
     "motion": "^12.23.12",
-    "next": "^15.5.5",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "pngjs": "^7.0.0",
     "radix-ui": "^1.4.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
@@ -64,15 +64,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@next/bundle-analyzer": "^15.4.5",
+    "@next/bundle-analyzer": "16.0.7",
     "@playwright/test": "^1.55.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pngjs": "^6.0.5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "15.3.5",
+    "eslint-config-next": "16.0.7",
     "lightningcss": "^1.30.1",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
@@ -81,5 +81,9 @@
     "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
     "vitest": "^0.34.6"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
