--- a/public/sprite_manifest.json
+++ b/public/sprite_manifest.json
@@ -14438,6 +14438,72 @@
         "width": 48
       }
     },
+    "dudunsparce": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparce/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparce/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparce/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparce/shiny_front.png",
+        "width": 56
+      }
+    },
+    "dudunsparce_threesegment": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparce_threesegment/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparce_threesegment/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparce_threesegment/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparce_threesegment/shiny_front.png",
+        "width": 56
+      }
+    },
+    "dudunsparcethreesegment": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparcethreesegment/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparcethreesegment/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparcethreesegment/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparcethreesegment/shiny_front.png",
+        "width": 56
+      }
+    },
     "dugtrio": {
       "normal_animated": {
         "height": 56,
