--- a/public/new/evolution_manifest.json
+++ b/public/new/evolution_manifest.json
@@ -234,10 +234,25 @@
     ]
   },
   {
+    "id": "clodsire",
+    "relatedPokemon": [
+      "clodsire",
+      "quagsire",
+      "wooper"
+    ]
+  },
+  {
     "id": "cloyster",
     "relatedPokemon": [
       "cloyster",
       "shellder"
+    ]
+  },
+  {
+    "id": "corsola",
+    "relatedPokemon": [
+      "corsola",
+      "cursola"
     ]
   },
   {
@@ -261,6 +276,13 @@
     "relatedPokemon": [
       "cubone",
       "marowak"
+    ]
+  },
+  {
+    "id": "cursola",
+    "relatedPokemon": [
+      "corsola",
+      "cursola"
     ]
   },
   {
@@ -436,6 +458,13 @@
     "relatedPokemon": [
       "exeggcute",
       "exeggutor"
+    ]
+  },
+  {
+    "id": "farfetchd",
+    "relatedPokemon": [
+      "farfetchd",
+      "sirfetchd"
     ]
   },
   {
@@ -1052,6 +1081,7 @@
     "id": "meowth",
     "relatedPokemon": [
       "meowth",
+      "perrserker",
       "persian"
     ]
   },
@@ -1229,6 +1259,13 @@
     ]
   },
   {
+    "id": "overqwil",
+    "relatedPokemon": [
+      "overqwil",
+      "qwilfish"
+    ]
+  },
+  {
     "id": "paras",
     "relatedPokemon": [
       "paras",
@@ -1243,9 +1280,18 @@
     ]
   },
   {
+    "id": "perrserker",
+    "relatedPokemon": [
+      "meowth",
+      "perrserker",
+      "persian"
+    ]
+  },
+  {
     "id": "persian",
     "relatedPokemon": [
       "meowth",
+      "perrserker",
       "persian"
     ]
   },
@@ -1404,6 +1450,7 @@
   {
     "id": "quagsire",
     "relatedPokemon": [
+      "clodsire",
       "quagsire",
       "wooper"
     ]
@@ -1414,6 +1461,13 @@
       "cyndaquil",
       "quilava",
       "typhlosion"
+    ]
+  },
+  {
+    "id": "qwilfish",
+    "relatedPokemon": [
+      "overqwil",
+      "qwilfish"
     ]
   },
   {
@@ -1543,6 +1597,13 @@
     ]
   },
   {
+    "id": "sirfetchd",
+    "relatedPokemon": [
+      "farfetchd",
+      "sirfetchd"
+    ]
+  },
+  {
     "id": "skiploom",
     "relatedPokemon": [
       "hoppip",
@@ -1592,6 +1653,15 @@
     "id": "sneasel",
     "relatedPokemon": [
       "sneasel",
+      "sneasler",
+      "weavile"
+    ]
+  },
+  {
+    "id": "sneasler",
+    "relatedPokemon": [
+      "sneasel",
+      "sneasler",
       "weavile"
     ]
   },
@@ -1904,6 +1974,7 @@
     "id": "weavile",
     "relatedPokemon": [
       "sneasel",
+      "sneasler",
       "weavile"
     ]
   },
@@ -1948,6 +2019,7 @@
   {
     "id": "wooper",
     "relatedPokemon": [
+      "clodsire",
       "quagsire",
       "wooper"
     ]
