feat: enhance Psychic move details and normalize move IDs
- Added detailed versions for the Psychic move in moves_manifest.json, including attributes for both 'faithful' and 'polished' versions.
- Reintroduced Lyra and Rocket Grunt trainers in trainer_manifest.json, correcting their order.
- Updated extract-moves.ts to normalize move IDs, ensuring consistency in move identification and display names.
- Refactored evolution-table.tsx to utilize a new utility function for formatting display names, improving code clarity and reusability.
- Moved item name formatting logic to stringUtils.ts for better organization and accessibility.

--- a/public/new/moves_manifest.json
+++ b/public/new/moves_manifest.json
@@ -4198,7 +4198,32 @@
   },
   {
     "id": "psychic",
-    "versions": {}
+    "versions": {
+      "faithful": {
+        "name": "Psychic",
+        "type": "psychic",
+        "power": 90,
+        "accuracy": 100,
+        "pp": 10,
+        "effectChance": 10,
+        "category": "special",
+        "description": "An attack that may lower Sp.Def."
+      },
+      "polished": {
+        "name": "Psychic",
+        "type": "psychic",
+        "power": 90,
+        "accuracy": 100,
+        "pp": 10,
+        "effectChance": 10,
+        "category": "special",
+        "description": "An attack that may lower Sp.Def."
+      }
+    },
+    "tm": {
+      "number": "tm29",
+      "location": "sabrina"
+    }
   },
   {
     "id": "psystrike",
