--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
     "remark-wiki-link": "^2.0.1",
+    "resend": "^6.5.2",
     "sharp": "^0.34.2",
     "tailwind-merge": "^3.3.1"
   },
