Add location names for TM/HM moves and update related code
- Added `locationName` field to TM/HM moves JSON files for better readability.
- Updated the `extract-moves.ts` script to handle the new `locationName` field.
- Modified the MoveDetail component to check if TM/HM locations exist.
- Enhanced MoveDetailClient and MoveTmLocationCard components to display location names and handle non-existent locations gracefully.
- Updated TypeScript types to include `locationName` for move data.

--- a/public/new/moves_manifest.json
+++ b/public/new/moves_manifest.json
@@ -75,7 +75,8 @@
     },
     "tm": {
       "number": "tm62",
-      "location": "route39farmhouse"
+      "location": "route39farmhouse",
+      "locationName": "Route 39 Farmhouse"
     }
   },
   {
@@ -104,7 +105,8 @@
     },
     "tm": {
       "number": "tm40",
-      "location": "mountmortar"
+      "location": "mountmortar",
+      "locationName": "Mount Mortar"
     }
   },
   {
@@ -333,7 +335,8 @@
     },
     "tm": {
       "number": "tm45",
-      "location": "whitney"
+      "location": "whitney",
+      "locationName": "Whitney"
     }
   },
   {
@@ -412,7 +415,8 @@
     },
     "tm": {
       "number": "tm67",
-      "location": "pryce"
+      "location": "pryce",
+      "locationName": "Pryce"
     }
   },
   {
@@ -541,7 +545,8 @@
     },
     "tm": {
       "number": "tm14",
-      "location": "goldenroddeptstore"
+      "location": "goldenroddeptstore",
+      "locationName": "Goldenrod Dept. Store"
     }
   },
   {
@@ -720,7 +725,8 @@
     },
     "tm": {
       "number": "tm08",
-      "location": "celadondeptstore"
+      "location": "celadondeptstore",
+      "locationName": "Celadon Dept. Store"
     }
   },
   {
@@ -749,7 +755,8 @@
     },
     "tm": {
       "number": "tm21",
-      "location": "route39"
+      "location": "route39",
+      "locationName": "Route 39"
     }
   },
   {
@@ -803,7 +810,8 @@
     },
     "tm": {
       "number": "tm04",
-      "location": "celadondeptstore"
+      "location": "celadondeptstore",
+      "locationName": "Celadon Dept. Store"
     }
   },
   {
@@ -1057,7 +1065,8 @@
     },
     "tm": {
       "number": "tm03",
-      "location": "celadonmansion"
+      "location": "celadonmansion",
+      "locationName": "Celadon Mansion"
     }
   },
   {
@@ -1086,7 +1095,8 @@
     },
     "tm": {
       "number": "hm01",
-      "location": "ilexforest"
+      "location": "ilexforest",
+      "locationName": "Ilex Forest"
     }
   },
   {
@@ -1115,7 +1125,8 @@
     },
     "tm": {
       "number": "tm58",
-      "location": "darkcave"
+      "location": "darkcave",
+      "locationName": "Dark Cave"
     }
   },
   {
@@ -1144,7 +1155,8 @@
     },
     "tm": {
       "number": "tm49",
-      "location": "bellchimetrail"
+      "location": "bellchimetrail",
+      "locationName": "Bellchime Trail"
     }
   },
   {
@@ -1223,7 +1235,8 @@
     },
     "tm": {
       "number": "tm28",
-      "location": "nationalpark"
+      "location": "nationalpark",
+      "locationName": "National Park"
     }
   },
   {
@@ -1402,7 +1415,8 @@
     },
     "tm": {
       "number": "tm32",
-      "location": "celadongamecorner"
+      "location": "celadongamecorner",
+      "locationName": "Celadon Game Corner"
     }
   },
   {
@@ -1456,7 +1470,8 @@
     },
     "tm": {
       "number": "tm02",
-      "location": "route27"
+      "location": "route27",
+      "locationName": "Route 27"
     }
   },
   {
@@ -1510,7 +1525,8 @@
     },
     "tm": {
       "number": "tm59",
-      "location": "clair"
+      "location": "clair",
+      "locationName": "Clair"
     }
   },
   {
@@ -1589,7 +1605,8 @@
     },
     "tm": {
       "number": "tm60",
-      "location": "noisyforest"
+      "location": "noisyforest",
+      "locationName": "Noisy Forest"
     }
   },
   {
@@ -1668,7 +1685,8 @@
     },
     "tm": {
       "number": "tm01",
-      "location": "chuck"
+      "location": "chuck",
+      "locationName": "Chuck"
     }
   },
   {
@@ -1722,7 +1740,8 @@
     },
     "tm": {
       "number": "tm26",
-      "location": "victoryroad"
+      "location": "victoryroad",
+      "locationName": "Victory Road"
     }
   },
   {
@@ -1826,7 +1845,8 @@
     },
     "tm": {
       "number": "tm53",
-      "location": "olivinelighthouse"
+      "location": "olivinelighthouse",
+      "locationName": "Olivine Lighthouse"
     }
   },
   {
@@ -1855,7 +1875,8 @@
     },
     "tm": {
       "number": "tm64",
-      "location": "underground"
+      "location": "underground",
+      "locationName": "Underground"
     }
   },
   {
@@ -1934,7 +1955,8 @@
     },
     "tm": {
       "number": "tm42",
-      "location": "dimcave"
+      "location": "dimcave",
+      "locationName": "Dim Cave"
     }
   },
   {
@@ -1963,7 +1985,8 @@
     },
     "tm": {
       "number": "tm54",
-      "location": "ilexforestgate"
+      "location": "ilexforestgate",
+      "locationName": "Ilex Forest Gate"
     }
   },
   {
@@ -2017,7 +2040,8 @@
     },
     "tm": {
       "number": "tm38",
-      "location": "goldenroddeptstore"
+      "location": "goldenroddeptstore",
+      "locationName": "Goldenrod Dept. Store"
     }
   },
   {
@@ -2096,7 +2120,8 @@
     },
     "tm": {
       "number": "tm43",
-      "location": "burnedtower"
+      "location": "burnedtower",
+      "locationName": "Burned Tower"
     }
   },
   {
@@ -2125,7 +2150,8 @@
     },
     "tm": {
       "number": "tm35",
-      "location": "goldenrodgamecorner"
+      "location": "goldenrodgamecorner",
+      "locationName": "Goldenrod Game Corner"
     }
   },
   {
@@ -2179,7 +2205,8 @@
     },
     "tm": {
       "number": "tm70",
-      "location": "sprouttower"
+      "location": "sprouttower",
+      "locationName": "Sprout Tower"
     }
   },
   {
@@ -2208,7 +2235,8 @@
     },
     "tm": {
       "number": "tm34",
-      "location": "route9"
+      "location": "route9",
+      "locationName": "Route 9"
     }
   },
   {
@@ -2237,7 +2265,8 @@
     },
     "tm": {
       "number": "hm02",
-      "location": "yellowforest"
+      "location": "yellowforest",
+      "locationName": "Yellow Forest"
     }
   },
   {
@@ -2266,7 +2295,8 @@
     },
     "tm": {
       "number": "tm52",
-      "location": "quietcave"
+      "location": "quietcave",
+      "locationName": "Quiet Cave"
     }
   },
   {
@@ -2420,7 +2450,8 @@
     },
     "tm": {
       "number": "tm19",
-      "location": "erika"
+      "location": "erika",
+      "locationName": "Erika"
     }
   },
   {
@@ -2449,7 +2480,8 @@
     },
     "tm": {
       "number": "tm68",
-      "location": "celadongamecorner"
+      "location": "celadongamecorner",
+      "locationName": "Celadon Game Corner"
     }
   },
   {
@@ -2603,7 +2635,8 @@
     },
     "tm": {
       "number": "tm74",
-      "location": "magnettunnel"
+      "location": "magnettunnel",
+      "locationName": "Magnet Tunnel"
     }
   },
   {
@@ -2632,7 +2665,8 @@
     },
     "tm": {
       "number": "tm07",
-      "location": "celadondeptstore"
+      "location": "celadondeptstore",
+      "locationName": "Celadon Dept. Store"
     }
   },
   {
@@ -2786,7 +2820,8 @@
     },
     "tm": {
       "number": "tm10",
-      "location": "lakeofrage"
+      "location": "lakeofrage",
+      "locationName": "Lake of Rage"
     }
   },
   {
@@ -2840,7 +2875,8 @@
     },
     "tm": {
       "number": "tm12",
-      "location": "route35"
+      "location": "route35",
+      "locationName": "Route 35"
     }
   },
   {
@@ -2944,7 +2980,8 @@
     },
     "tm": {
       "number": "tm15",
-      "location": "goldenroddeptstore"
+      "location": "goldenroddeptstore",
+      "locationName": "Goldenrod Dept. Store"
     }
   },
   {
@@ -3048,7 +3085,8 @@
     },
     "tm": {
       "number": "tm13",
-      "location": "goldenrodgamecorner"
+      "location": "goldenrodgamecorner",
+      "locationName": "Goldenrod Game Corner"
     }
   },
   {
@@ -3227,7 +3265,8 @@
     },
     "tm": {
       "number": "tm23",
-      "location": "jasmine"
+      "location": "jasmine",
+      "locationName": "Jasmine"
     }
   },
   {
@@ -3306,7 +3345,8 @@
     },
     "tm": {
       "number": "tm50",
-      "location": "yellowforest"
+      "location": "yellowforest",
+      "locationName": "Yellow Forest"
     }
   },
   {
@@ -3410,7 +3450,8 @@
     },
     "tm": {
       "number": "tm16",
-      "location": "goldenroddeptstore"
+      "location": "goldenroddeptstore",
+      "locationName": "Goldenrod Dept. Store"
     }
   },
   {
@@ -4039,7 +4080,8 @@
     },
     "tm": {
       "number": "tm66",
-      "location": "janine"
+      "location": "janine",
+      "locationName": "Janine"
     }
   },
   {
@@ -4168,7 +4210,8 @@
     },
     "tm": {
       "number": "tm17",
-      "location": "goldenroddeptstore"
+      "location": "goldenroddeptstore",
+      "locationName": "Goldenrod Dept. Store"
     }
   },
   {
@@ -4222,7 +4265,8 @@
     },
     "tm": {
       "number": "tm29",
-      "location": "sabrina"
+      "location": "sabrina",
+      "locationName": "Sabrina"
     }
   },
   {
@@ -4351,7 +4395,8 @@
     },
     "tm": {
       "number": "tm18",
-      "location": "celadondeptstore"
+      "location": "celadondeptstore",
+      "locationName": "Celadon Dept. Store"
     }
   },
   {
@@ -4455,7 +4500,8 @@
     },
     "tm": {
       "number": "tm33",
-      "location": "goldenroddeptstore"
+      "location": "goldenroddeptstore",
+      "locationName": "Goldenrod Dept. Store"
     }
   },
   {
@@ -4484,7 +4530,8 @@
     },
     "tm": {
       "number": "tm44",
-      "location": "dimcave"
+      "location": "dimcave",
+      "locationName": "Dim Cave"
     }
   },
   {
@@ -4513,7 +4560,8 @@
     },
     "tm": {
       "number": "tm27",
-      "location": "goldenroddeptstore"
+      "location": "goldenroddeptstore",
+      "locationName": "Goldenrod Dept. Store"
     }
   },
   {
@@ -4567,7 +4615,8 @@
     },
     "tm": {
       "number": "tm05",
-      "location": "route32"
+      "location": "route32",
+      "locationName": "Route 32"
     }
   },
   {
@@ -4621,7 +4670,8 @@
     },
     "tm": {
       "number": "tm48",
-      "location": "brock"
+      "location": "brock",
+      "locationName": "Brock"
     }
   },
   {
@@ -4650,7 +4700,8 @@
     },
     "tm": {
       "number": "tm31",
-      "location": "route36"
+      "location": "route36",
+      "locationName": "Route 36"
     }
   },
   {
@@ -4729,7 +4780,8 @@
     },
     "tm": {
       "number": "tm51",
-      "location": "falkner"
+      "location": "falkner",
+      "locationName": "Falkner"
     }
   },
   {
@@ -4783,7 +4835,8 @@
     },
     "tm": {
       "number": "tm20",
-      "location": "celadondeptstore"
+      "location": "celadondeptstore",
+      "locationName": "Celadon Dept. Store"
     }
   },
   {
@@ -4812,7 +4865,8 @@
     },
     "tm": {
       "number": "tm37",
-      "location": "celadondeptstore"
+      "location": "celadondeptstore",
+      "locationName": "Celadon Dept. Store"
     }
   },
   {
@@ -4841,7 +4895,8 @@
     },
     "tm": {
       "number": "tm55",
-      "location": "route19"
+      "location": "route19",
+      "locationName": "Route 19"
     }
   },
   {
@@ -4995,7 +5050,8 @@
     },
     "tm": {
       "number": "tm30",
-      "location": "morty"
+      "location": "morty",
+      "locationName": "Morty"
     }
   },
   {
@@ -5024,7 +5080,8 @@
     },
     "tm": {
       "number": "tm65",
-      "location": "lavendersoulhouse"
+      "location": "lavendersoulhouse",
+      "locationName": "Lavender Soul House"
     }
   },
   {
@@ -5228,7 +5285,8 @@
     },
     "tm": {
       "number": "tm36",
-      "location": "route43"
+      "location": "route43",
+      "locationName": "Route 43"
     }
   },
   {
@@ -5282,7 +5340,8 @@
     },
     "tm": {
       "number": "tm22",
-      "location": "goldenroddeptstore"
+      "location": "goldenroddeptstore",
+      "locationName": "Goldenrod Dept. Store"
     }
   },
   {
@@ -5436,7 +5495,8 @@
     },
     "tm": {
       "number": "tm47",
-      "location": "route28"
+      "location": "route28",
+      "locationName": "Route 28"
     }
   },
   {
@@ -5490,7 +5550,8 @@
     },
     "tm": {
       "number": "tm71",
-      "location": "blue"
+      "location": "blue",
+      "locationName": "Blue"
     }
   },
   {
@@ -5519,7 +5580,8 @@
     },
     "tm": {
       "number": "hm04",
-      "location": "cianwoodcity"
+      "location": "cianwoodcity",
+      "locationName": "Cianwood City"
     }
   },
   {
@@ -5623,7 +5685,8 @@
     },
     "tm": {
       "number": "tm41",
-      "location": "lakeofrage"
+      "location": "lakeofrage",
+      "locationName": "Lake of Rage"
     }
   },
   {
@@ -5677,7 +5740,8 @@
     },
     "tm": {
       "number": "tm11",
-      "location": "celadondeptstore"
+      "location": "celadondeptstore",
+      "locationName": "Celadon Dept. Store"
     }
   },
   {
@@ -5756,7 +5820,8 @@
     },
     "tm": {
       "number": "hm03",
-      "location": "ecruteakcity"
+      "location": "ecruteakcity",
+      "locationName": "Ecruteak City"
     }
   },
   {
@@ -5835,7 +5900,8 @@
     },
     "tm": {
       "number": "tm39",
-      "location": "unioncave"
+      "location": "unioncave",
+      "locationName": "Union Cave"
     }
   },
   {
@@ -5864,7 +5930,8 @@
     },
     "tm": {
       "number": "tm75",
-      "location": "celadondeptstore"
+      "location": "celadondeptstore",
+      "locationName": "Celadon Dept. Store"
     }
   },
   {
@@ -5968,7 +6035,8 @@
     },
     "tm": {
       "number": "tm46",
-      "location": "teamrocketbase"
+      "location": "teamrocketbase",
+      "locationName": "Team Rocket Base"
     }
   },
   {
@@ -6022,7 +6090,8 @@
     },
     "tm": {
       "number": "tm25",
-      "location": "goldenroddeptstore"
+      "location": "goldenroddeptstore",
+      "locationName": "Goldenrod Dept. Store"
     }
   },
   {
@@ -6051,7 +6120,8 @@
     },
     "tm": {
       "number": "tm24",
-      "location": "goldenrodgamecorner"
+      "location": "goldenrodgamecorner",
+      "locationName": "Goldenrod Game Corner"
     }
   },
   {
@@ -6130,7 +6200,8 @@
     },
     "tm": {
       "number": "tm73",
-      "location": "rocktunnel"
+      "location": "rocktunnel",
+      "locationName": "Rock Tunnel"
     }
   },
   {
@@ -6159,7 +6230,8 @@
     },
     "tm": {
       "number": "tm06",
-      "location": "celadongamecorner"
+      "location": "celadongamecorner",
+      "locationName": "Celadon Game Corner"
     }
   },
   {
@@ -6313,7 +6385,8 @@
     },
     "tm": {
       "number": "tm69",
-      "location": "bugsy"
+      "location": "bugsy",
+      "locationName": "Bugsy"
     }
   },
   {
@@ -6342,7 +6415,8 @@
     },
     "tm": {
       "number": "tm09",
-      "location": "route11"
+      "location": "route11",
+      "locationName": "Route 11"
     }
   },
   {
@@ -6396,7 +6470,8 @@
     },
     "tm": {
       "number": "tm72",
-      "location": "route10"
+      "location": "route10",
+      "locationName": "Route 10"
     }
   },
   {
@@ -6425,7 +6500,8 @@
     },
     "tm": {
       "number": "hm06",
-      "location": "icepath"
+      "location": "icepath",
+      "locationName": "Ice Path"
     }
   },
   {
@@ -6479,7 +6555,8 @@
     },
     "tm": {
       "number": "tm63",
-      "location": "misty"
+      "location": "misty",
+      "locationName": "Misty"
     }
   },
   {
@@ -6508,7 +6585,8 @@
     },
     "tm": {
       "number": "hm05",
-      "location": "route42"
+      "location": "route42",
+      "locationName": "Route 42"
     }
   },
   {
@@ -6537,7 +6615,8 @@
     },
     "tm": {
       "number": "tm57",
-      "location": "ltsurge"
+      "location": "ltsurge",
+      "locationName": "Lt. Surge"
     }
   },
   {
@@ -6566,7 +6645,8 @@
     },
     "tm": {
       "number": "tm61",
-      "location": "blaine"
+      "location": "blaine",
+      "locationName": "Blaine"
     }
   },
   {
@@ -6645,7 +6725,8 @@
     },
     "tm": {
       "number": "tm56",
-      "location": "undergroundwarehouse"
+      "location": "undergroundwarehouse",
+      "locationName": "Underground Warehouse"
     }
   },
   {
